Archive2/68/5b164593273de5/output
main.cpp: In function 'int main()':
main.cpp:15:31: error: invalid operands of types 'int' and 'const char [4]' to binary 'operator<<'
                 cout << (i << " = " << g[i]);
                               ^
main.cpp:19:31: error: invalid operands of types 'int' and 'const char [4]' to binary 'operator<<'
                 cout << (i << " = " << g[i]);
                               ^
main.cpp:23:31: error: invalid operands of types 'int' and 'const char [4]' to binary 'operator<<'
                 cout << (i << " = " << g[i]);
                               ^
